--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 bg-white p-2 d-flex align-items-center justify-content-between">
+<div class="w-100 bg-white p-2 d-flex align-items-center justify-content-between sticky-top">
   <img src="assets/logo/logo.png" alt="">
   <div class="d-flex gap-4 align-items-center">
     <i class="bi bi-bell position-relative fs-4 mt-2">
